--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -381,12 +381,16 @@ body {
 
 .promo {
 	width: 100%;
-	padding: 160px 0 140px 0;
+	/* padding: 150px 0 40px 0; */
+	padding: 230px 0 0px 0;
 	background-image: url(../img/bg-promo.png);
-	background-position: center top;
+	background-position: center;
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-repeat: no-repeat;
+}
+.promo .slick-list {
+	padding-bottom: 65px;
 }
 .product-slide {
 	display: -webkit-flex;
@@ -398,10 +402,13 @@ body {
 	justify-content: flex-start;
 }
 .col {
-	display: inline-block;
+	position: relative;
+	display: block;
 }
 .col--half {
+	display: inline-block;
 	width: 50%;
+	float: left;
 }
 .col--info {
 	padding-bottom: 80px;
@@ -410,7 +417,7 @@ body {
 	position: relative;
 	display: block;
 	max-width:  423px;
-	max-height: 533px;
+	max-height: 610px;
 	z-index: 10;
 }
 .product-slider__photo img {
@@ -472,13 +479,22 @@ body {
 	outline: none;
 	transition: 0.2s linear;
 	user-select: none;
+	text-decoration: none;
+	color: #fff;
+}
+
+.btn:hover {
+	text-decoration: none;
+	color: #fff;
 }
 .btn--orange {
 	color: #fff;
 	background-color: #f05840;
 }
 .btn--orange:hover, .btn--orange:active {
+	color: #fff;
 	background-color: #ff6f59;
+	text-decoration: none;
 }
 .btn--promo-buy {
 	padding-right: 45px;
@@ -543,8 +559,8 @@ body {
 }
 .promo-nav-slide img {
 	display: inline-block;
-	width: 67px;
-	height: 93px;
+	width: 100px;
+	height: 139px;
 	transition: 0.5s linear;
 }
 .promo-nav-slide:after {
@@ -762,6 +778,13 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	z-index: 1;
+}
+.svekla-hor-right {
+	background-image: url(../img/svekla.svg);
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	transform: rotate(270deg);
 }
 .recipes .svekla {
 	width: 367px;
@@ -1275,4 +1298,245 @@ footer .section-title {
 	font-size: 1.8em;
 	font-weight: 400;
 	line-height: 1;
+}
+
+
+/* PRODUCT PAGE */
+.product .slide__image {
+	width: 100%;
+}
+.recipe-ingredients {
+	padding: 60px 0;
+}
+.recipe-ingredients .recipe-name {
+	width: 100%;
+}
+.recipe-ingredients .time, .recipe-ingredients .portion {
+	width: auto;
+	font-weight: 700;
+	margin-right: 40px;
+}
+.recipe-ingredients .ingredients {
+	width: 100%;
+}
+.recipe-ingredients .ingredients .col {
+	color: #01336e;
+	font-family: "Open Sans Condensed";
+	font-size: 2.4em;
+	font-weight: 300;
+	line-height: 2;
+	list-style-type: none;
+}
+.recipe-ingredients .ingredients .col li:before {
+	display: inline-block;
+	width: 7px;
+	height: 7px;
+	border-radius: 5px;
+	content: '';
+	background-color: #f15940;
+	top: 50%;
+	transform: translateY(-50%);
+	margin-right: 10px;
+}
+.recipe-ingredients .slider-controls {
+	max-width: 550px;
+}
+.prev-recipe, .next-recipe {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 50%;
+}
+.prev-recipe:hover, .next-recipe:hover {
+	text-decoration: none;
+}
+.prev-recipe {
+	justify-content: flex-start;
+}
+.next-recipe {
+	justify-content: flex-end;
+}
+.prev-text, .next-text {
+	color: #143e74;
+	font-family: "Open Sans Condensed";
+	font-size: 2.4em;
+	font-weight: 300;
+}
+.prev-text {
+	margin-right: 20px;
+}
+.next-text {
+	margin-left: 20px;
+}
+
+.cooking {
+	padding: 80px 0;
+}
+.how-to-cook-title {
+	text-align: center;
+	color: #01336e;
+	font-family: "Open Sans Condensed";
+	font-size: 5.4em;
+	font-weight: 700;
+	line-height: 1;
+	text-transform: uppercase;
+}
+.cooking-step {
+	padding: 80px 0;
+}
+.cooking-step--gray {
+	background-color: #f4f8fa;
+}
+.cooking-step-col {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	align-items: flex-start;
+}
+.cooking-step__title {
+	color: #01336e;
+	font-family: "Open Sans Condensed";
+	font-size: 3.6em;
+	font-weight: 700;
+	line-height: 1;
+	margin-top: 30px;
+	z-index: 5;
+}
+.cooking-step__description {
+	color: #01336e;
+	font-size: 1.8em;
+	font-family: "Open Sans";
+	font-weight: 400;
+	line-height: 1.7;
+	width: 50%;
+	z-index: 5;
+}
+.cooking-step__number {
+	position: absolute;
+	color: #dae2e6;
+	font-family: "Open Sans";
+	font-size: 34.1em;
+	line-height: 1;
+	font-weight: 700;
+	top: 0;
+	right: 60px;
+}
+.cooking-step .svekla-hor-right{
+	height: 455px;
+	width: 368px;
+	top: 43%;
+	left: 10%;
+}
+.cooking-step .col {
+	padding: 0 25px;
+}
+.all-recipes {
+	padding: 80px 0;
+}
+.all-recipes .section-title {
+	margin-bottom: 70px;
+}
+.recipes-catalog {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+
+	align-items: center;
+	justify-content: space-between;
+	padding: 0 25px;
+}
+.recipes-catalog .recipe {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	width: 30%;
+}
+.recipes-catalog .recipe .recipe__photo {
+	width: 100%;
+}
+.all-recipes .recipes-more {
+	padding: 35px 0;
+	width: 100%;
+	text-align: center;
+}
+.all-products {
+	padding: 70px 0;
+}
+.all-products .section-title {
+	margin-bottom: 80px;
+}
+.all-products .product-slide { text-align: center; }
+.all-products .product__item {
+	display: inline-block;
+	width: 237px;
+	height: 334px;
+	-moz-transition: all 0.6s ease-out;
+	-o-transition: all 0.6s ease-out;
+	-webkit-transition: all 0.6s ease-out;
+	transition: all 0.6s ease-out;
+	margin-top: 59px;
+	margin-bottom: 45px;
+}
+.all-products .product-slide.slick-current .product__item {
+	width: 278px;
+	height: 393px;
+	margin-top: 0;
+}
+.all-products .product__title {
+	text-align: center;
+	color: #01336e;
+	font-family: "Open Sans Condensed";
+	font-size: 2.2em;
+	font-weight: 700;
+	line-height: 1.3;
+	margin-bottom: 20px;
+}
+.all-products .description {
+	color: #01336e;
+	font-family: "Open Sans";
+	font-size: 1.8em;
+	font-weight: 400;
+	line-height: 1.5;
+}
+.all-products .slider-controls {
+	display: -webkit-inline-flex;
+	display: -moz-inline-flex;
+	display: -ms-inline-flex;
+	display: -o-inline-flex;
+	display: inline-flex;
+}
+.all-products-controls {
+	margin-top: 55px;
+}
+.all-products .slider-controls {
+	max-width: 220px;
+	width: 100%;
+	margin: 0;
+}
+.all-products-controls .btn--promo-buy, a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
+	color: #fff;
+}
+.center {
+	text-align: center;
+}
+.right {
+	text-align: right;
+}
+.left {
+	text-align-last:
 }
